# PiDP-8-sim

./: .cproject  .gitignore  .project  CMakeLists.txt  CPU.cpp  CPU.h  Chassis.cpp  Chassis.h  CmdConsole.cpp  CmdConsole.h  Console.cpp  Console.h  ConsoleAPI.h  DK8EA.cpp  DK8EA.h  Device.cpp  Device.h  Encoder.h  FileUtilities.h  INSTALL  LICENSE  Makefile  Memory.cpp  Memory.h  PDP8.cpp  PDP8.h  Panel.cpp  Panel.h  README.md  Registers.h  Server.h  SignalHandler.h  Terminal.cpp  Terminal.h  Thread.cpp  Thread.h  VirtualPanel.cpp  VirtualPanel.h  asm8.cpp  bar-descriptor.xml  (+2 more)
asm/: .gitignore  Makefile  palbart.c
assembler/: Assembler.cpp  Assembler.h  TestPrograms.h
assembler/Samples/: DeepThought.pal  Test.pal
assets/: pdp8_clkpi.c
etc/: Makefile  rc.pidp8  rc.pidp8.in
pal/: DeepThought.pal  Makefile  SGDT.pal  Test.pal
src/: Accumulator.cpp  Accumulator.h  CPU.cpp  CPU.h  Chassis.cpp  Chassis.h  Console.cpp  Console.h  CoreMemory.cpp  CoreMemory.h  DECWriter.cpp  DECWriter.h  DK8EA.cpp  DK8EA.h  DK8_EA.cpp  DK8_EA.h  Device.cpp  Device.h  HostInterface.cpp  HostInterface.h  IOTDevice.cpp  IOTDevice.h  Instruction.cpp  Instruction.h  Makefile  Memory.cpp  Memory.h  NullStream.cpp  NullStream.h  PDP8.cpp  PDP8.h  Panel.cpp  Panel.h  Pannel.cpp  Pannel.h  Pdp8Terminal.cpp  Pdp8Terminal.h  Register.cpp  Register.h  Terminal.cpp  (+13 more)
src/assembler/: Assembler.cpp  Assembler.h  TestPrograms.h
src/assembler/samples/: BINLoader.pal  SGDT.pal  Test.pal
tests/: CPU_Tests_0.cpp  TestOprInst.cpp  ct_OprInst.cpp
tests/libs/: CodeFragmentTest.cpp  CodeFragmentTest.h
